Fix responsive issues on small devices

--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
   background-color: #151515;
 }
 
 .calculator {
-  width: fit-content;
+  max-width: 90%;
   padding: 1.5rem;
   background-color: #222;
 }
@@ -34,21 +34,21 @@ body {
 }
 
 .calc-display {
-  width: 12ch;
+  width: 100%;
   margin-bottom: 1.5rem;
   border-top: 2px solid #0d7000;
-  padding: 3.5rem 0.7rem 0.5rem 2rem;
   background-color: #353535;
   font-size: 3.5em;
   font-weight: 300;
   text-align: right;
   color: #eee;
+  padding: 3.5rem 0.7rem 0.5rem 2rem;
 }
 
 .calc-body {
   display: grid;
   grid-gap: 0.2rem;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 1fr;
   user-select: none;
 }
